# mcp_proxy_rust

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
examples/: echo_streamable.rs
src/: core.rs  main.rs  state.rs
tests/: advanced_test.rs  basic_test.rs  elicitation_test.rs
tests/echo/: mod.rs
